# Vigilante

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  battle_manager.cpp  battle_manager.h  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/audios/: audios_manager.cpp  audios_manager.h
src/app/battle/: battle.cpp  generate_battle.cpp  generate_battle.h  hero_panel_manager.cpp  hero_panel_manager.h  operate_manager.cpp  operate_manager.h  round_manager.cpp  warfare.cpp  warfare.h
src/app/data/: cell_grid.cpp  edge.h  graph.cpp  graph.h  tree.h
src/app/gui/: brief_property_panel.cpp  brief_property_panel.h  gui.cpp  gui.h  gui_buton.cpp  gui_hero_description.cpp  gui_hero_description.h  gui_hero_description_item.cpp  gui_hero_description_item.h  gui_location_hero.cpp  gui_location_hero.h  gui_panel.cpp  gui_panel.h  gui_skip_round.cpp  gui_skip_round.h  gui_terrain_description.cpp  gui_terrain_description.h  gui_terrain_description_item.cpp  gui_terrain_description_item.h  td_colourful_cell.cpp  td_colourful_cell.h  terrain_decoration.h
src/app/hero/: battle_hero.cpp  battle_hero.h  hc_path_mover.cpp  hero.cpp  hero.h  hero_controller.cpp  hero_controller.h  hero_sheet.h  hero_sprite.cpp  hero_sprite.h  hero_state.cpp  hero_state.h
src/app/scene/: layout_colourful_cell.h  layout_terrain.cpp  layout_terrain.h  path_map.cpp  path_map.h  scene_manager.cpp  scene_manager.h  tile_sheet.cpp  view.cpp  view.h
src/app/terrain_decoration/: td_colourful_cell.h  terrain_decoration.cpp
src/battle/: battle_manager.cpp  battle_manager.h  battle_view.cpp  battle_view.h  gridtype.cpp  gridtype.h  layout.cpp  layout.h  layout_terrain.cpp  layout_terrain.h  operate_manager.cpp  operate_manager.h  path_grid.cpp  path_grid.h  round_manager.cpp  tile_sheet.cpp  tile_sheet.h  warfare.cpp
src/data/: cell_grid.cpp  cell_grid.h  edge.cpp  edge.h  graph.cpp  tree.cpp
src/graphics/: res.qrc
src/gui/: brief_property_item.cpp  brief_property_item.h  brief_property_panel.cpp  brief_property_panel.h  colourful_map_block.cpp  colourful_map_block.h  gui.h  gui_location_hero.cpp  gui_location_hero.h  gui_panel.cpp  gui_panel.h
src/hero/: hc_path_mover.cpp  hc_path_mover.h  hero.cpp  hero.h  hero_sheet.cpp  hero_sprite.cpp  hero_sprite.h
src/hero_editor/: CMakeLists.txt  hero_data.cpp  hero_data.h.autosave  main.cpp
src/map_editor/: CMakeLists.txt  cell.cpp  cell.h  cell_grid.h  editor_data.cpp  editor_data.h  editor_view.cpp  editor_view.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  map_tile_item.cpp  map_tile_item.h  map_tile_type_item.cpp  map_tile_type_item.h  mediator.cpp  mediator.h  tool_widget.cpp  tool_widget.h
src/scene/: layout_colourful_cell.cpp  layout_colourful_cell.h  layout_instructions.cpp  layout_instructions.h  layout_terrain.cpp  layout_terrain.h  path_grid.cpp  path_grid.h  path_map.cpp  path_map.h  scene_manager.cpp  scene_manager.h  terrain_map.cpp  terrain_map.h  tile_sheet.cpp  tile_sheet.h  view.cpp  view.h
src/tadpole/: CMakeLists.txt  Readme.md
src/tadpole/angela/: lightbutton.cpp  lightbutton.h
src/tadpole/utils/: file_util.cpp  file_util.h  gingleton.h  log_manager.cpp  log_manager.h  macro.h  qui_helper.cpp  qui_helper.h  string_util.cpp  string_util.h  xml_util.cpp  xml_util.h
src/warfare/: diplomacy_manager.cpp  diplomacy_manager.h  hero_panel_manager.cpp  hero_panel_manager.h  operate_manager.cpp  operate_manager.h  round_manager.cpp  round_manager.h  warfare.cpp  warfare.h
